--- a/GreetingApplication/src/main/resources/application.properties
+++ b/GreetingApplication/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.application.name=GreetingApplication
+spring.application.name=Greeting_App
+
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
@@ -9,3 +10,19 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+# SMTP Server Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=roshi4713@gmail.com
+spring.mail.password=owqcxugdhsvjnlfg
+
+# Enable SMTP authentication
+spring.mail.properties.mail.smtp.auth=true
+
+# Enable STARTTLS encryption
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Use TLS v1.2 (Important for secure communication)
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+
+
